Fix header on smaller screens

--- a/src/components/Header/Nav/ProductNavigation/Desktop/productNavigation.module.css
+++ b/src/components/Header/Nav/ProductNavigation/Desktop/productNavigation.module.css
@@ -71,7 +71,7 @@
   padding: var(--space-2x);
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 992px) {
   .root {
     display: flex;
   }
