--- a/src/components/Header/Nav/ProductNavigation/Mobile/productNavigation.module.css
+++ b/src/components/Header/Nav/ProductNavigation/Mobile/productNavigation.module.css
@@ -118,7 +118,7 @@
   gap: var(--space-2x);
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 992px) {
   .logo,
   .trigger {
     display: none;
