--- a/src/components/Header/Nav/navBar.module.css
+++ b/src/components/Header/Nav/navBar.module.css
@@ -336,7 +336,7 @@
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 992px) {
   .container {
     position: relative;
     display: flex;
